// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserPasswordUpdate should click update password button 1`] = `
<div>
  <div
    class="flex items-center align-middle my-8 justify-between"
    data-testid="edit-user-update-password"
  >
    <div
      class="w-1/5 font-sans font-bold subpixel-antialiased text-lg text-gray-600 mx-20"
    >
      Password updated on
    </div>
    <div
      class="w-1/2 mx-20 flex items-center align-middle"
    >
      <div
        class="font-sans subpixel-antialiased text-lg text-gray-500"
        data-testid="password-updated-date"
      >
        28 Apr 2022
      </div>
      <button
        class="flex items-center justify-center gap-1 px-9 py-2 mx-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-110 mx-10 text-white w-fit bg-sky-500"
        data-testid="update-password-btn"
      >
        Update password
      </button>
    </div>
  </div>
</div>
`;

exports[`UserPasswordUpdate should not display password updated date when updated date is empty 1`] = `
<div>
  <div
    class="flex items-center align-middle my-8 justify-between"
    data-testid="edit-user-update-password"
  >
    <div
      class="w-1/5 font-sans font-bold subpixel-antialiased text-lg text-gray-600 mx-20"
    >
      Password updated on
    </div>
    <div
      class="w-1/2 mx-20 flex items-center align-middle"
    >
      <button
        class="flex items-center justify-center gap-1 px-9 py-2 mx-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-110 mx-10 text-white w-fit bg-sky-500"
        data-testid="update-password-btn"
      >
        Update password
      </button>
    </div>
  </div>
</div>
`;

exports[`UserPasswordUpdate should render UserPasswordUpdate 1`] = `
<div>
  <div
    class="flex items-center align-middle my-8 justify-between"
    data-testid="edit-user-update-password"
  >
    <div
      class="w-1/5 font-sans font-bold subpixel-antialiased text-lg text-gray-600 mx-20"
    >
      Password updated on
    </div>
    <div
      class="w-1/2 mx-20 flex items-center align-middle"
    >
      <div
        class="font-sans subpixel-antialiased text-lg text-gray-500"
        data-testid="password-updated-date"
      >
        28 Apr 2022
      </div>
      <button
        class="flex items-center justify-center gap-1 px-9 py-2 mx-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-110 mx-10 text-white w-fit bg-sky-500"
        data-testid="update-password-btn"
      >
        Update password
      </button>
    </div>
  </div>
</div>
`;
